--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </ul>
         <h2>Ex-Alunos</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>pao</li>
+            <li>q</li>
+            <li>c</li>
         </ul>
         
     </body>
