--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <h1>NP</h1>>
         <h2>Moradores</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Kiabbo</li>
+            <li>lan</li>
+            <li>Usu</li>
         </ul>
         <h2>Ex-Alunos</h2>
         <ul>
