Ajeitei a lista de moradores

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <h2>Moradores</h2>
         <ul>
             <li>Kiabbo</li>
-            <li>lan</li>
-            <li>Usu</li>
+            <li>landesa</li>
+            <li>Usuario</li>
         </ul>
         <h2>Ex-Alunos</h2>
         <ul>
