--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h2>Ex-Alunos</h2>
         <ul>
             <li>pao</li>
-            <li>q</li>
-            <li>c</li>
+            <li>Precos</li>
+            <li>Balão</li>
         </ul>
         
     </body>
