--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Ex-Alunos</h2>
         <ul>
             <li>pao</li>
-            <li>Precos</li>
+            <li>Preco-CC</li>
             <li>Balão</li>
         </ul>
         
